[gd_scene load_steps=8 format=2]

[ext_resource path="res://elementos/UI/card_vitoria.png" type="Texture" id=1]
[ext_resource path="res://elementos/UI/botao_voltar_a_tela_inicial_pressed.png" type="Texture" id=2]
[ext_resource path="res://elementos/UI/botao_voltar_a_tela_inicial_hover.png" type="Texture" id=3]
[ext_resource path="res://elementos/UI/botao_voltar_a_tela_inicial_default.png" type="Texture" id=4]
[ext_resource path="res://elementos/audio/bgm/jogo/tela-vitoria.mp3" type="AudioStream" id=5]
[ext_resource path="res://elementos/audio/sfx/hud-clique.mp3" type="AudioStream" id=6]
[ext_resource path="res://recursos/Menu_principal/TelasExtras/Tela_vitoria.gd" type="Script" id=7]

[node name="Tela_Vitoria" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -640.0
margin_right = 360.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( -1361, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="Transparencia" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1529.0
margin_top = -775.0
margin_right = 1872.0
margin_bottom = 539.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 0.752941 )

[node name="Menu" type="TextureRect" parent="."]
pause_mode = 2
anchor_left = 0.507
anchor_top = 0.5
anchor_right = 0.507
anchor_bottom = 0.5
margin_left = -297.04
margin_top = -425.0
margin_right = 296.96
margin_bottom = 403.0
mouse_filter = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="VoltarMenu" type="TextureButton" parent="Menu"]
anchor_left = 0.513
anchor_top = 0.906
anchor_right = 0.513
anchor_bottom = 0.906
margin_left = -176.722
margin_top = -33.168
margin_right = 177.278
margin_bottom = 32.832
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AudioStreamBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "BGM Track"

[node name="AudioStreamSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX Menu"

[connection signal="button_down" from="Menu/VoltarMenu" to="." method="_on_VoltarMenu_button_down"]
[connection signal="button_up" from="Menu/VoltarMenu" to="." method="_on_VoltarMenu_button_up"]
